added data prep section

--- a/templates/acronyms.tex
+++ b/templates/acronyms.tex
@@ -10,6 +10,7 @@
 \newacronym{doe}{DOE}{United States Department of Energy}
 \newacronym{egs}{EGS}{Enhanced Geothermal Systems}
 \newacronym{eia}{EIA}{United States Energy Information Administration}
+\newacronym{ebk}{EBK}{Empirical Bayes Kriging}
 \newacronym{ep}{E\&P}{Exploration and Production}
 \newacronym{gdh}{GDH}{Geothermal District Heating}
 \newacronym{ghg}{GHG}{Greenhouse Gas}
