--- a/templates/chap1.tex
+++ b/templates/chap1.tex
@@ -91,3 +91,11 @@ This thesis follows the flow shown in Figure \ref{fig:thesis_flow} and is struct
 \item Chapters 8 and 9 conclude the thesis with a summary of thesis insights (Ch. 8) and a list of future work opportunities (Ch. 9).
 \end{itemize}
 \end{figure}
+
+%\begin{wrapfigure}[4in]{R}{0.5\linewidth}
+%%\vspace{-10pt}
+%%\centering
+%%\includegraphics[scale=0.45]{Figure-ThesisWorkflow}
+%%\caption[Flow chart for thesis structure]{Flow chart of thesis structure. Chapter number placement indicates the content presented within each chapter.} 
+%%\label{fig:thesis_flow}
+%%\end{wrapfigure}
