--- a/templates/main.tex
+++ b/templates/main.tex
@@ -32,6 +32,7 @@
 \usepackage[utf8]{inputenc}
 \usepackage{graphicx}
 \graphicspath{{templates/images/}}
+\usepackage{wrapfig}
 
 %% for tables
 \usepackage[normalem]{ulem}
