--- a/templates/zotero.bib
+++ b/templates/zotero.bib
@@ -1,4 +1,65 @@
 
+@inproceedings{sani_computational_2018,
+	title = {Computational complexity analysis of decision tree algorithms},
+	publisher = {Springer},
+	author = {Sani, Habiba Muhammad and Lei, Ci and Neagu, Daniel},
+	year = {2018},
+	pages = {191--197},
+}
+
+@misc{esri_what_2021,
+	title = {What is {Empirical} {Bayes} {Kriging}},
+	url = {https://pro.arcgis.com/en/pro-app/latest/help/analysis/geostatistical-analyst/what-is-empirical-bayesian-kriging-.htm},
+	language = {en},
+	urldate = {2021-06-17},
+	journal = {ArcGIS Pro {\textbar} Documentation},
+	author = {{ESRI}},
+	year = {2021},
+}
+
+@misc{esri_how_2021,
+	title = {How {Kriging} works},
+	url = {https://pro.arcgis.com/en/pro-app/latest/tool-reference/3d-analyst/how-kriging-works.htm},
+	urldate = {2021-06-17},
+	journal = {ArcGIS Pro {\textbar} Documentation},
+	author = {{ESRI}},
+	year = {2021},
+}
+
+@misc{esri_how_2021-1,
+	title = {How {Topo} to {Raster} works},
+	url = {https://pro.arcgis.com/en/pro-app/latest/tool-reference/3d-analyst/how-topo-to-raster-works.htm},
+	urldate = {2021-06-17},
+	journal = {ArcGIS Pro {\textbar} Documentation},
+	author = {{ESRI}},
+	year = {2021},
+}
+
+@misc{esri_how_2021-2,
+	title = {How {Spline} works},
+	url = {https://pro.arcgis.com/en/pro-app/latest/tool-reference/3d-analyst/how-spline-works.htm},
+	urldate = {2021-06-17},
+	journal = {ArcGIS Pro {\textbar} Documentation},
+	author = {{ESRI}},
+	year = {2021},
+}
+
+@book{silverman_density_1986,
+	title = {Density estimation for statistics and data analysis},
+	author = {Silverman, BW},
+	year = {1986},
+	note = {Publisher: Chapman \& Hall},
+}
+
+@misc{esri_how_2021-3,
+	title = {How {Kernel} {Density} works},
+	url = {https://pro.arcgis.com/en/pro-app/latest/tool-reference/spatial-analyst/how-kernel-density-works.htm},
+	urldate = {2021-06-17},
+	journal = {ArcGIS Pro {\textbar} Documentation},
+	author = {{ESRI}},
+	year = {2021},
+}
+
 @techreport{blackwell_geothermal_2014,
 	address = {Washington, D.C},
 	type = {Final {Report}},
@@ -330,22 +391,6 @@ This database consists of five major Arc/Info GIS datasets for each state;
 	journal = {GDR},
 	author = {Kelley, Rick},
 	year = {2015},
-}
-
-@misc{esri_how_2021,
-	title = {How {Kernel} {Density} works—{ArcGIS} {Pro} {\textbar} {Documentation}},
-	url = {https://pro.arcgis.com/en/pro-app/latest/tool-reference/spatial-analyst/how-kernel-density-works.htm},
-	urldate = {2021-06-14},
-	author = {{ESRI}},
-	year = {2021},
-}
-
-@book{silverman_density_2018,
-	title = {Density estimation for statistics and data analysis},
-	isbn = {1-315-14091-8},
-	publisher = {Routledge},
-	author = {Silverman, Bernard W},
-	year = {2018},
 }
 
 @article{daly_physiographically_2008,
