lots of edits - ready to move on to conditioning

--- a/templates/main.tex
+++ b/templates/main.tex
@@ -33,6 +33,7 @@
 \usepackage{graphicx}
 \graphicspath{{templates/images/}}
 \usepackage{wrapfig}
+\usepackage{caption}
 
 %% for tables
 \usepackage[normalem]{ulem}
