--- a/templates/zotero.bib
+++ b/templates/zotero.bib
@@ -1,4 +1,63 @@
 
+@article{sanford_earthquake_2002,
+	title = {Earthquake catalogs for {New} {Mexico} and bordering areas: 1869–1998},
+	volume = {210},
+	journal = {New Mexico Bureau of Geology and Mineral Resources Circular},
+	author = {Sanford, Allan and Lin, Kuo-wan and Tsai, I-ching and Jaksha, Lawrence H},
+	year = {2002},
+	pages = {1--9},
+}
+
+@article{sanford_earthquake_2006,
+	title = {Earthquake catalogs for {New} {Mexico} and bordering areas {II}: 1999–2004},
+	volume = {28},
+	abstract = {Earthquakes in New Mexico and bordering areas have been instrumentally located since 1962 at New Mexico Institute of Mining and Technology. Catalogs of these earthquakes for the period 1962 through 1998 were published in 2002. This report extends the cataloging of earthquakes for the region through 2004. For this 6-yr period 198 earthquakes with magnitudes of 2.0 or greater were located. An unusual feature of the seismicity 1999 through 2004 is that 63\% of the earthquakes were concentrated in two swarms, one near water disposal wells on the western edge of the Dagger Draw oil field in southeastern New Mexico, and the other within and bordering the coalbed methane fields of the Raton Basin in northeastern New Mexico. We suggest that the proximity of these swarms to oil and gas fields may indicate that the earthquakes are induced by destabilization of the crust through production and waste disposal practices. The remaining 37\% of the earthquakes 1999 through 2004 were concentrated near Socorro and west Texas. Except for the Socorro area, activity along the Rio Grande rift was low.},
+	language = {en},
+	number = {4},
+	journal = {New Mexico Geology},
+	author = {Sanford, Allan},
+	year = {2006},
+	pages = {99--109},
+}
+
+@misc{kreemer_global_2020,
+	title = {Global {Strain} {Rate} {Model} v.2.1},
+	shorttitle = {{GSRM}},
+	url = {http://geodesy.unr.edu/GSRM/},
+	urldate = {2021-06-14},
+	author = {Kreemer, Corné},
+	month = apr,
+	year = {2020},
+}
+
+@article{pedregosa_scikit-learn_2011,
+	title = {Scikit-learn: {Machine} learning in {Python}},
+	volume = {12},
+	issn = {1532-4435},
+	journal = {the Journal of machine Learning research},
+	author = {Pedregosa, Fabian and Varoquaux, Gaël and Gramfort, Alexandre and Michel, Vincent and Thirion, Bertrand and Grisel, Olivier and Blondel, Mathieu and Prettenhofer, Peter and Weiss, Ron and Dubourg, Vincent},
+	year = {2011},
+	note = {Publisher: JMLR. org},
+	pages = {2825--2830},
+}
+
+@article{keller_comparative_1991,
+	title = {A comparative study of the {Rio} {Grande} and {Kenya} rifts},
+	volume = {197},
+	issn = {0040-1951},
+	url = {https://www.sciencedirect.com/science/article/pii/0040195191900503},
+	doi = {10.1016/0040-1951(91)90050-3},
+	abstract = {Since they are two of the prominent continental rifts which are active today, the Kenya and Rio Grande rifts have been the subject of many recent studies. There are many gaps in our knowledge, but the data available make a comparative analysis worthwhile. Although they are part of much larger extensional regimes, these rifts are of similar dimensions and extent. In addition to these obvious similarities, geophysical data suggest the crustal and upper mantle structures of these features are also similar. They both are associated with relatively localized crustal thinning and much broader zones of lithospheric thinning. Seismic and gravity data indicate that the basement structure beneath both rift valleys is very complex, and recent studies have stressed the role of low-angle normal faulting in their structural development. However, geologic data and earthquake focal mechanisms indicate that high-angle normal faults and strike-slip faulting are also important. However, as one looks at the tectonic evolution and volcanic histories of the rifts, many differences are apparent. Volcanism has been virtually continuous in the Kenya rift area for over 20 Ma and the total volume of extrusives is over 200,000 km3. Unlike the Kenya rift, the Rio Grande rift formed in a region which was already both tectonically and magmatically active. Thus, there is uncertainty about what constitutes rift volcanism in the Rio Grande rift. However, the volume of extrusives generally accepted to be associated with this rift is about 5–10\% that of the Kenya rift. The compositions of the volcanics are also very different in these rifts, and the Kenya rift displays migration of volcanic activity, and compositional variations in time which have not been recognized in the Rio Grande rift. The volcanic activity in the Rio Grande rift post-dated most of the faulting, whereas faulting and volcanism display complex interactions in Kenya. The nature and timing of uplift are important but difficult questions in both rifts.},
+	language = {en},
+	number = {2},
+	urldate = {2021-02-11},
+	journal = {Tectonophysics},
+	author = {Keller, G. Randy and Khan, A. and Morganc, P. and Wendlandt, R. and Baldridge, S. and Olsen, K. and Prodehl, C. and Braile, L. W.},
+	month = oct,
+	year = {1991},
+	pages = {355--371},
+}
+
 @inproceedings{sani_computational_2018,
 	title = {Computational complexity analysis of decision tree algorithms},
 	publisher = {Springer},
@@ -285,19 +344,7 @@ This database consists of five major Arc/Info GIS datasets for each state;
 	pages = {3--12},
 }
 
-@article{sanford_earthquake_2006,
-	title = {Earthquake catalogs for {New} {Mexico} and bordering areas {II}: 1999–2004},
-	volume = {28},
-	abstract = {Earthquakes in New Mexico and bordering areas have been instrumentally located since 1962 at New Mexico Institute of Mining and Technology. Catalogs of these earthquakes for the period 1962 through 1998 were published in 2002. This report extends the cataloging of earthquakes for the region through 2004. For this 6-yr period 198 earthquakes with magnitudes of 2.0 or greater were located. An unusual feature of the seismicity 1999 through 2004 is that 63\% of the earthquakes were concentrated in two swarms, one near water disposal wells on the western edge of the Dagger Draw oil field in southeastern New Mexico, and the other within and bordering the coalbed methane fields of the Raton Basin in northeastern New Mexico. We suggest that the proximity of these swarms to oil and gas fields may indicate that the earthquakes are induced by destabilization of the crust through production and waste disposal practices. The remaining 37\% of the earthquakes 1999 through 2004 were concentrated near Socorro and west Texas. Except for the Socorro area, activity along the Rio Grande rift was low.},
-	language = {en},
-	number = {4},
-	journal = {New Mexico Geology},
-	author = {Sanford, Allan R},
-	year = {2006},
-	pages = {99--109},
-}
-
-@article{sanford_earthquake_2002,
+@article{sanford_earthquake_2002-1,
 	title = {Earthquake catalogs for {New} {Mexico} and bordering areas: 1869-1998},
 	volume = {210},
 	shorttitle = {Earthquake catalogs for {New} {Mexico} and bordering areas},
@@ -305,23 +352,6 @@ This database consists of five major Arc/Info GIS datasets for each state;
 	author = {Sanford, Allan and Lin, Kuo-Wan and Tsai, I-ching and Jaksha, Lawrence},
 	year = {2002},
 	pages = {1--9},
-}
-
-@article{keller_comparative_1991,
-	title = {A comparative study of the {Rio} {Grande} and {Kenya} rifts},
-	volume = {197},
-	issn = {0040-1951},
-	url = {https://www.sciencedirect.com/science/article/pii/0040195191900503},
-	doi = {10.1016/0040-1951(91)90050-3},
-	abstract = {Since they are two of the prominent continental rifts which are active today, the Kenya and Rio Grande rifts have been the subject of many recent studies. There are many gaps in our knowledge, but the data available make a comparative analysis worthwhile. Although they are part of much larger extensional regimes, these rifts are of similar dimensions and extent. In addition to these obvious similarities, geophysical data suggest the crustal and upper mantle structures of these features are also similar. They both are associated with relatively localized crustal thinning and much broader zones of lithospheric thinning. Seismic and gravity data indicate that the basement structure beneath both rift valleys is very complex, and recent studies have stressed the role of low-angle normal faulting in their structural development. However, geologic data and earthquake focal mechanisms indicate that high-angle normal faults and strike-slip faulting are also important. However, as one looks at the tectonic evolution and volcanic histories of the rifts, many differences are apparent. Volcanism has been virtually continuous in the Kenya rift area for over 20 Ma and the total volume of extrusives is over 200,000 km3. Unlike the Kenya rift, the Rio Grande rift formed in a region which was already both tectonically and magmatically active. Thus, there is uncertainty about what constitutes rift volcanism in the Rio Grande rift. However, the volume of extrusives generally accepted to be associated with this rift is about 5–10\% that of the Kenya rift. The compositions of the volcanics are also very different in these rifts, and the Kenya rift displays migration of volcanic activity, and compositional variations in time which have not been recognized in the Rio Grande rift. The volcanic activity in the Rio Grande rift post-dated most of the faulting, whereas faulting and volcanism display complex interactions in Kenya. The nature and timing of uplift are important but difficult questions in both rifts.},
-	language = {en},
-	number = {2},
-	urldate = {2021-02-11},
-	journal = {Tectonophysics},
-	author = {Keller, Randy and Khan, A. and Morganc, P. and Wendlandt, R. and Baldridge, S. and Olsen, K. and Prodehl, C. and Braile, L. W.},
-	month = oct,
-	year = {1991},
-	pages = {355--371},
 }
 
 @misc{utep_gravity_2011,
@@ -340,16 +370,6 @@ This database consists of five major Arc/Info GIS datasets for each state;
 	journal = {Understanding the potential for earthquakes through strain},
 	author = {{GEM}},
 	year = {2014},
-}
-
-@misc{kreemer_corne_global_2020,
-	title = {Global {Strain} {Rate} {Model} v.2.1},
-	shorttitle = {{GSRM}},
-	url = {http://geodesy.unr.edu/GSRM/},
-	urldate = {2021-06-14},
-	author = {{Kreemer, Corne}},
-	month = apr,
-	year = {2020},
 }
 
 @techreport{duval_terrestrial_2005,
@@ -371,15 +391,6 @@ This database consists of five major Arc/Info GIS datasets for each state;
 	journal = {Search Earthquake Catalog},
 	author = {{USGS}},
 	year = {2021},
-}
-
-@article{sanford_earthquake_2002-1,
-	title = {Earthquake catalogs for {New} {Mexico} and bordering areas: 1869–1998},
-	volume = {210},
-	journal = {New Mexico Bureau of Geology and Mineral Resources Circular},
-	author = {Sanford, Allan R and Lin, Kuo-wan and Tsai, I-ching and Jaksha, Lawrence H},
-	year = {2002},
-	pages = {1--9},
 }
 
 @misc{kelley_geothermal_2015,
