over halfway through data conditioning

--- a/templates/zotero.bib
+++ b/templates/zotero.bib
@@ -1,4 +1,74 @@
 
+@book{lanl_geothermal_1991,
+	title = {Geothermal gradient contour map of the {United} {States}},
+	publisher = {US Department of Energy, Los Alamos National Laboratory},
+	author = {{LANL} and Kron, Andrea and Wohletz, Kenneth and Tubb, John},
+	year = {1991},
+}
+
+@misc{scikit-learn_sklearnpreprocessingstandardscaler_2021,
+	title = {sklearn.preprocessing.{StandardScaler}},
+	url = {https://scikit-learn.org/stable/modules/generated/sklearn.preprocessing.StandardScaler.html},
+	urldate = {2021-06-18},
+	journal = {StandardScaler -- scikit-learn 0.24.2 documentation},
+	author = {{scikit-learn}},
+	year = {2021},
+}
+
+@misc{scikit-learn_sklearnpreprocessingpowertransformer_2021,
+	title = {sklearn.preprocessing.{PowerTransformer}},
+	url = {https://scikit-learn.org/stable/modules/generated/sklearn.preprocessing.PowerTransformer.html#rf3e1504535de-1},
+	urldate = {2021-06-18},
+	journal = {PowerTransformer -- scikit-learn 0.24.2 documentation},
+	author = {{scikit-learn}},
+	year = {2021},
+}
+
+@article{yeo_new_2000,
+	title = {A new family of power transformations to improve normality or symmetry},
+	volume = {87},
+	issn = {1464-3510},
+	number = {4},
+	journal = {Biometrika},
+	author = {Yeo, In‐Kwon and Johnson, Richard A},
+	year = {2000},
+	note = {Publisher: Oxford University Press},
+	pages = {954--959},
+}
+
+@article{weisberg_yeo-johnson_2001,
+	title = {Yeo-{Johnson} power transformations},
+	volume = {1},
+	journal = {Department of Applied Statistics, University of Minnesota. Retrieved June},
+	author = {Weisberg, Sanford},
+	year = {2001},
+	pages = {2003},
+}
+
+@book{montgomery_statistical_2012,
+	title = {Statistical quality control},
+	isbn = {1-118-21468-4},
+	publisher = {Wiley Global Education},
+	author = {Montgomery, Douglas C},
+	year = {2012},
+}
+
+@book{gimond_intro_2021,
+	title = {Intro to {GIS} and {Spatial} {Analysis}},
+	url = {https://mgimond.github.io/Spatial/},
+	abstract = {This is a compilation of lecture notes that accompany my Intro to GIS and Spatial Analysis course.},
+	urldate = {2021-06-18},
+	author = {Gimond, Manuel},
+	year = {2021},
+}
+
+@article{abadi_tensorflow_2016,
+	title = {Tensorflow: {Large}-scale machine learning on heterogeneous distributed systems},
+	journal = {arXiv preprint arXiv:1603.04467},
+	author = {Abadi, Martín and Agarwal, Ashish and Barham, Paul and Brevdo, Eugene and Chen, Zhifeng and Citro, Craig and Corrado, Greg S and Davis, Andy and Dean, Jeffrey and Devin, Matthieu},
+	year = {2016},
+}
+
 @article{sanford_earthquake_2002,
 	title = {Earthquake catalogs for {New} {Mexico} and bordering areas: 1869–1998},
 	volume = {210},
